# plasma-ion-meteireann

./: .SRCINFO  .gitignore  CMakeLists.txt  NOTICE.met-eireann.txt  PKGBUILD  README.md  plasma-ion-meteireann.install
.github/workflows/: arch-build.yml
.reuse/: dep5
include/: plasmaweatherdata_export.h  plasmaweatherion_export.h
plugin/: CMakeLists.txt  ion_meteireann.cpp  ion_meteireann.h  metadata.json
